# jack-claw

./: .env  .env.example  .gitignore  ASYNC_LLM_CALL_FIX.md  AUTO_TOKEN_UPDATE.md  CHANGELOG.md  COMPLETE_FIXES_SUMMARY.md  DEBUGGING.md  EXECUTION_FLOW.md  FINAL_SKILL_INVOCATION_FIX.md  FIXES_SUMMARY.md  LLM_TIMEOUT_FIX.md  QUICKSTART.md  README.md  SKILLS_LIST_INJECTION_FIX.md  SKILL_LOADER_TOOL_IMPLEMENTATION.md  config.yaml  config.yaml.example  config.yaml.template  diagnose_feishu.py  init.sh  pgvector-docker-compose.yaml  pyproject.toml  quota.json  quota_example.json  sandbox-docker-compose.yaml  set_max_token.py  start.sh  stop.sh  test_feishu_simple.py  test_handler.py  test_import.py  test_quota_update.sh  test_sdk.py  test_send.py
docs/: PROJECT_OVERVIEW.md  README.md  SECURITY.md  USER_GUIDE.md  analysis.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
jackclaw/: __init__.py  config.py  main.py  models.py  runner.py
jackclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jackclaw_team/: config.yaml.template  main.py  models.py  runner.py  sandbox-docker-compose.yaml
schema.sql/: schema.sql
scripts/: check_env.py
shared_hooks/: audit_logger.py  cost_guard.py  hooks.yaml  langfuse_trace.py  loop_detector.py  permission_gate.py  retry_tracker.py  sandbox_guard.py  structured_log.py
tests/: test_async_llm_call.py  test_config.py  test_cron.py  test_e2e.py  test_routing_key.py  test_sandbox.py  test_session.py  test_skill_loader.py  test_skill_loader_tool.py
(+90 files in other folders)
